Simulator 2.0 Updates for README.md
There was still a lot of legacy documentation related to Simulator 1.0 kicking around in the README - this commit addresses that and updates it all for Simulator 2.0.